@@ -30,6 +30,7 @@ ui_basic.c, win32/atari_win32.c, wince/port/atari_wince.c, wince/port/main.c,
 wince/port/screen_wince.cpp: rename externals to Screen_, atari_screen ->
 Screen_atari, etc. move entire_screen_dirty from antic.c to screen.c, rename
 Screen_EntireDirty.
+* xep80.[ch]: rename ATARI_EOL -> XEP80_ATARI_EOL
 
 
 2008-06-30  Perry McFarlane  <perry_m@fastmail.fm>
